01/08/2004  version 0.3 pre9    Ian Lewis <IanLewis@member.fsf.org>

    * Updated so that getVersion() works properly;

01/05/2005  version 0.3 pre7    Ian Lewis <IanLewis@member.fsf.org>

    * Updated to use new Plugin API
    * Added a dialog to continue searching from the beginning of a file.

12/13/2004  verison 0.3 pre2    Ian Lewis <IanLewis@member.fsf.org>

    * Updated to use the build properties to get the plugin version

12/12/2004  version 0.3 pre1    Ian Lewis <IanLewis@member.fsf.org>

    * Updated the Source View to be a plugin